--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
 
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
-    <div>
+    <header>
       <h1>Exceptional Header</h1>
       <h2>Really, it is a great header</h2>
-    </div>
+    </header>
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
     <span>
@@ -74,7 +74,7 @@
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
+    <footer>
       <h3>Contact</h3>
       <p>
         email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -95,7 +95,7 @@
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
       </div>
-    </div>
+    </footer>
 
   </body>
 </html>
